Fixed Button small-content centering
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/packages/ui/Button/Button.less
+++ b/packages/ui/Button/Button.less
@@ -29,13 +29,14 @@
 	.client {
 		display: flex;
 		align-items: center;
+		justify-content: center;
 		box-sizing: border-box;
 		height: 100%;
 		position: relative;
 
 		// Colored under-bar
 		&::before {
-			content: '';
+			content: "";
 			position: absolute;
 		}
 	}
